--- a/PollFiction.Web/Views/Home/Register.cshtml
+++ b/PollFiction.Web/Views/Home/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model PollFiction.Web.Models.RegisterViewModel
+﻿@model PollFiction.Services.Models.RegisterViewModel
 
 @{
     ViewData["Title"] = "Création d'un compte";
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Register">
+        <form asp-action="Register" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pseudo" class="control-label"></label>
