--- a/PollFiction.Web/Views/Home/Register.cshtml
+++ b/PollFiction.Web/Views/Home/Register.cshtml
@@ -7,8 +7,8 @@
 <h1>Création de compte</h1>
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="container-form">
         <form asp-action="Register" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -37,14 +37,26 @@
                 <span asp-validation-for="ConfirmPwd" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Envoyer" class="btn btn-primary" />
+                <input type="submit" class="btn btn-primary" />
             </div>
+
+            @if(!string.IsNullOrEmpty(@Model.Error))
+            {
+                <div class="error">
+                    <p>
+                        @Model.Error
+                    </p>
+                </div>
+            }
+
         </form>
     </div>
 </div>
 
+
+
 <div>
-    <a asp-action="Index">Revenir au la page D'accueil</a>
+    <a asp-action="Index">Revenir au la page d'accueil</a>
 </div>
 
 @section Scripts {
