--- a/PollFiction.Web/wwwroot/css/site.css
+++ b/PollFiction.Web/wwwroot/css/site.css
@@ -31,6 +31,27 @@ for details on configuring this project to bundle and minify static web assets. 
     background-color:lightskyblue;
 }
 
+.error{
+    color:red;
+    font-weight:bold;
+}
+
+h1{
+    text-align:center;
+}
+
+.container-form {
+    padding: 20px;
+    margin: 20px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 10px;
+}
+
+.container-form form {
+    display:block;
+    margin:auto;
+    max-width : 50%;
+}
 
 /* Fin CSS personnalisé de PollFiction !!!!!!*/
 a.navbar-brand {
