--- a/PollFiction.Web/Views/Home/Login.cshtml
+++ b/PollFiction.Web/Views/Home/Login.cshtml
@@ -1,14 +1,15 @@
 ﻿@model PollFiction.Web.Models.LoginViewModel
 
 @{
-    ViewData["Title"] = "Page de connection";
+    ViewData["Title"] = "Login";
 }
 
 <h1>Login</h1>
 
+<h4>LoginViewModel</h4>
 <hr />
-<div class="container">
-    <div class="container-form">
+<div class="row">
+    <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -22,14 +23,24 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Envoyer" class="btn btn-primary" />
+                <label asp-for="ReturnUrl" class="control-label"></label>
+                <input asp-for="ReturnUrl" class="form-control" />
+                <span asp-validation-for="ReturnUrl" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+                </label>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Revenir au la page d'accueil</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
