verif log avec BDD et systeme de cookie

--- a/PollFiction.Web/Views/Home/Index.cshtml
+++ b/PollFiction.Web/Views/Home/Index.cshtml
@@ -8,8 +8,8 @@
     </div>
 
     <div class="index-lien">
-        <a class="index-a" asp-controller="home" asp-action="login">S'identifier</a>
-        <a class="index-a" asp-controller="home" asp-action="register">Inscription</a>
+        <a class="index-a" asp-area="" asp-controller="Home" asp-action="Dashboard">S'identifier</a>
+        <a class="index-a" asp-controller="Home" asp-action="register">Inscription</a>
     </div>
     
 </section>
