--- a/PollFiction.Web/Views/Home/Login.cshtml
+++ b/PollFiction.Web/Views/Home/Login.cshtml
@@ -1,15 +1,14 @@
 ﻿@model PollFiction.Web.Models.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "Identification";
 }
 
-<h1>Login</h1>
+<h1>Identification</h1>
 
-<h4>LoginViewModel</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container">
+    <div class="container-form">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -23,26 +22,29 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ReturnUrl" class="control-label"></label>
-                <input asp-for="ReturnUrl" class="form-control" />
-                <span asp-validation-for="ReturnUrl" class="text-danger"></span>
+                <input type="hidden" name="ReturnUrl" id="ReturnUrl" value="@Model.ReturnUrl" />
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RememberMe" /> @Html.DisplayNameFor(model => model.RememberMe)
+
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="custom-control-input" asp-for="RememberMe" id="customSwitch1" />
+                <label class="custom-control-label" for="customSwitch1">
+                     @Html.DisplayNameFor(model => model.RememberMe)
                 </label>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Identifier" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Revenir au la page d'accueil</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
