--- a/PollFiction.Web/Views/Home/Index.cshtml
+++ b/PollFiction.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     </div>
 
     <div class="index-lien">
-        <a class="index-a" asp-area="" asp-controller="Home" asp-action="Dashboard">S'identifier</a>
+        <a class="index-a" asp-controller="Home" asp-action="Dashboard">S'identifier</a>
         <a class="index-a" asp-controller="Home" asp-action="register">Inscription</a>
     </div>
     
