--- a/PollFiction.Web/Views/Poll/Dashboard.cshtml
+++ b/PollFiction.Web/Views/Poll/Dashboard.cshtml
@@ -1,10 +1,10 @@
-﻿@model PollFiction.Data.Model.User
+﻿@model List<PollFiction.Data.Model.Poll>
 @{
-    ViewData["Title"] = "Tableau de bord de " + @Model.UserPseudo;
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    ViewData["Title"] = "Tableau de bord de ";
+    //Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h1>Tableau de bord</h1>
+<h1>Tableau de bord - @User.Claims.FirstOrDefault(u => u.Type.Equals("name"))</h1>
 
 <hr />
 <div class="container">
@@ -15,6 +15,14 @@
                 <input type="submit" value="Rechercher" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+    <div class="container-form">
+        @{
+            foreach(var poll in Model)
+            {
+                <div>@poll.PollTitle</div>
+            }
+        }
     </div>
 </div>
 
