--- a/PollFiction.Web/Views/Shared/_Layout.cshtml
+++ b/PollFiction.Web/Views/Shared/_Layout.cshtml
@@ -22,9 +22,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Poll" asp-action="CreatePoll">Créer un sondage</a>
                         </li>
                     </ul>
+                    @if(User.Claims.FirstOrDefault(u => u.Type.Equals("name")) != null)
+                    {
+                        <div class="deco-lien">
+                            <a class="index-a" asp-area="" asp-controller="Home" asp-action="Logout">
+                                <span class="deco-black">@User.Claims.FirstOrDefault(u => u.Type.Equals("name")).Value - </span>
+                                Déconnexion
+                            </a>
+                        </div>
+                    }
                 </div>
             </div>
         </nav>
