--- a/PollFiction.Web/Views/Home/Register.cshtml
+++ b/PollFiction.Web/Views/Home/Register.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="container">
     <div class="container-form">
-        <form asp-action="Register" method="post">
+        <form asp-action="Register" method="post" class="form1">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pseudo" class="control-label"></label>
