--- a/PollFiction.Web/Views/Poll/CreatePoll.cshtml
+++ b/PollFiction.Web/Views/Poll/CreatePoll.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="container">
     <div class="container-form">
-        <form asp-action="CreatePoll" id="CreatePoll">
+        <form asp-action="CreatePoll" id="CreatePoll" class="form1">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="custom-control-input" asp-for="Multiple" id="customSwitch1" />
@@ -57,7 +57,7 @@
     await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
     <script>
-            let count = 1;
+           let count = 1;
 
            function DelChoice(nbr) {
 
