--- a/PollFiction.Web/Views/Poll/Dashboard.cshtml
+++ b/PollFiction.Web/Views/Poll/Dashboard.cshtml
@@ -4,7 +4,7 @@
     //Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<h1>Tableau de bord - @User.Claims.FirstOrDefault(u => u.Type.Equals("name"))</h1>
+<h3>Tableau de bord - @User.Claims.FirstOrDefault(u => u.Type.Equals("name")).Value</h3>
 
 <hr />
 <div class="container">
@@ -17,11 +17,20 @@
         </form>
     </div>
     <div class="container-form">
+        <h4>Vos sondage crées</h4>
+        
         @{
             foreach(var poll in Model)
             {
-                <div>@poll.PollTitle</div>
-                <div><a href="#"> lien tu sondage @poll.PollId </a> </div>
+                <div class="container-lien-poll">
+                    <a href="#" class="lien-sondage" title="">@poll.PollTitle</a>
+                    <div>
+                        <img src="~/images/modify40.png" alt="Motifier le sondage" class="img-list-poll-dashbord">
+                        <a href="/Poll/Vote?code=@poll.PollLinkAccess" title="voter"><img src="~/images/vote64.png" alt="Motifier le sondage" class="img-list-poll-dashbord"></a>
+                        <img src="~/images/combine48.png" alt="Motifier le sondage" class="img-list-poll-dashbord">
+                        <img src="~/images/close60.png" alt="Motifier le sondage" class="img-list-poll-dashbord">
+                    </div>
+                </div>
             }
         }
     </div>
