--- a/PollFiction.Web/Views/Poll/Vote.cshtml
+++ b/PollFiction.Web/Views/Poll/Vote.cshtml
@@ -26,9 +26,15 @@
                         @Html.RadioButtonFor(m => m.ChoiceId , choice.ChoiceId) <span>@Html.Label(@choice.ChoiceText)</span>
                         <br />
                     }
+                    else
+                    {
+                        <input type="checkbox" name="CheckChoice" value="@choice.ChoiceId" /><span>@Html.Label(@choice.ChoiceText)</span>
+                        <br />
+                    }
                 }
             }
-            
+            <input type="hidden" name="PollId" value="@Model.Poll.PollId" />
+            <input type="hidden" name="GuestId" value="@Model.GuestId" />
             <div class="form-group">
                 <input type="submit" value="Voter !" class="btn btn-primary" />
             </div>
