création page stat et corrections de bugs en cours....

--- a/PollFiction.Web/Views/Poll/Dashboard.cshtml
+++ b/PollFiction.Web/Views/Poll/Dashboard.cshtml
@@ -65,8 +65,9 @@
                         </a>
                         }
 
-                        <img src="~/images/combine48.png" alt="Motifier le sondage" class="img-list-poll-dashbord">
-                        
+                        <a href="/Poll/Vote?code=@poll.PollCreator.PollLinkStat" title="Visualiser les résultats">
+                            <img src="~/images/combine48.png" alt="Visualiser les résultats" class="img-list-poll-dashbord">
+                        </a>
                     </div>
                 </div>
             }
