--- a/PollFiction.Web/Views/Poll/Vote.cshtml
+++ b/PollFiction.Web/Views/Poll/Vote.cshtml
@@ -38,7 +38,7 @@
                     }
                     else
                     {
-                        <input type="checkbox" name="CheckChoice" value="@choice.ChoiceId" id="@choice.ChoiceId"  @check/> 
+                        <input type="checkbox" name="CheckChoice" value="@choice.ChoiceId" id="@choice.ChoiceId" @check/> 
                         <span>
                             <label for="@choice.ChoiceId" > @choice.ChoiceText</label>
                         </span>
@@ -56,7 +56,7 @@
 </div>
 
 <div>
-    <a asp-action="Dashboard">Back to List</a>
+    <a asp-action="Dashboard">Revenir au tableau de bord</a>
 </div>
 
 @section Scripts {
